tmp fix horiz alignment of ul.social-links & first paragraph in footer sections

--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -16,3 +16,8 @@ footer a {
 footer h2 {
   font-size: 1.5rem;
 }
+
+footer ul.social-links {
+  /* horizontally aligns first li and p of each footer section */
+  margin-top: -4px;
+}
